Implemented PostView class. Added auto generated JSON (de)serialization of PostView class by json_serializable package. Added required packages and dependencies in pubsec.yalm:  - json_annotation: ^3.0.1,  - json_serializable: ^3.3.0,  - build_runner: ^1.10.0. TODO: Implement ParseDateFromJson static method in PostView class.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  json_annotation: ^3.0.1
   flutter:
     sdk: flutter
 
@@ -33,6 +34,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   effective_dart: ^1.0.0
+  json_serializable: ^3.3.0
+  build_runner: ^1.10.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
