--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,3 +5,6 @@ linter:
     public_member_api_docs: false
     prefer_expression_function_bodies: true
     prefer_single_quotes: true
+analyzer:
+  exclude:
+    - '**/*.g.dart'
