--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,12 @@ dependencies:
   timeago: ^2.0.27
   lemmy_api_client: ^0.1.3
 
+  mobx: ^1.2.1
+  flutter_mobx: ^1.1.0
+  provider: ^4.3.1
+
+  shared_preferences: '>=0.5.0 <2.0.0'
+
   flutter:
     sdk: flutter
 
@@ -39,6 +45,7 @@ dev_dependencies:
     sdk: flutter
   effective_dart: ^1.0.0
   build_runner: ^1.10.0
+  mobx_codegen: ^1.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
