--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: '>=2.7.0 <3.0.0'
 
 dependencies:
+  flutter_slidable: ^0.5.7
   photo_view: ^0.10.2
   url_launcher: ^5.5.1
   markdown: ^2.1.8
