--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,26 +21,30 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  # widgets
   flutter_speed_dial: ^1.2.5
   flutter_slidable: ^0.5.7
   photo_view: ^0.10.2
-  url_launcher: ^5.5.1
   markdown: ^2.1.8
   flutter_markdown: ^0.4.3
-  esys_flutter_share: ^1.0.2
-  flutter_hooks: ^0.13.2
   cached_network_image: ^2.2.0+1
-  timeago: ^2.0.27
-  fuzzy: <1.0.0
 
-  lemmy_api_client: ^0.6.0
+  # native
+  esys_flutter_share: ^1.0.2
+  url_launcher: ^5.5.1
+  shared_preferences: ">=0.5.0 <2.0.0"
+  package_info: ^0.4.3
 
+  # state management
+  flutter_hooks: ^0.13.2
   mobx: ^1.2.1
   flutter_mobx: ^1.1.0
   provider: ^4.3.1
 
-  shared_preferences: ">=0.5.0 <2.0.0"
-  package_info: ^0.4.3
+  # utils
+  timeago: ^2.0.27
+  fuzzy: <1.0.0
+  lemmy_api_client: ^0.6.0
 
   flutter:
     sdk: flutter
