--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,14 @@ jobs:
   CI:
     name: CI
     runs-on: ubuntu-latest
+    outputs:
+      linuxReleaseName: lemmur-${{ steps.vars.outputs.tag }}-x86_64-linux
     steps:
       - uses: actions/checkout@v2
+
+      - name: Set variables
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
 
       - uses: actions/setup-java@v1
         with:
@@ -61,11 +67,13 @@ jobs:
         run: |
           flutter build linux
           cd build/linux/release/
-          zip -r linux.zip *
+          tar -czf ${{ needs.CI.outputs.linuxReleaseName }}.tar.gz *
 
   release:
     name: Release
-    needs: linux-build
+    needs:
+      - linux-build
+      - CI
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/') && github.repository == 'krawieck/lemmur'
     steps:
@@ -74,6 +82,7 @@ jobs:
         with:
           files: |
             build/app/outputs/apk/release/*.apk
-            build/linux/release/linux.zip
+            build/linux/release/${{ needs.CI.outputs.linuxReleaseName }}.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
