Add and generate app icons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,15 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   effective_dart: ^1.0.0
+  flutter_launcher_icons: ^0.8.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: assets/app_icon.png
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: assets/adaptive_icon_fg.png
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
