Enable sort children last

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -48,7 +48,7 @@ linter:
     avoid_redundant_argument_values: true
     avoid_escaping_inner_quotes: true
     # always_declare_return_types: true
-    # sort_child_properties_last: true
+    sort_child_properties_last: true
     # prefer_const_constructors: true
     # prefer_const_declarations: true
     # prefer_const_literals_to_create_immutables: true
