Constify the whole codebase

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -49,7 +49,7 @@ linter:
     avoid_escaping_inner_quotes: true
     # always_declare_return_types: true
     sort_child_properties_last: true
-    # prefer_const_constructors: true
+    prefer_const_constructors: true
     prefer_const_declarations: true
     prefer_const_literals_to_create_immutables: true
     prefer_const_constructors_in_immutables: true
