Add windows ico

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: lemmur
-description: A new Flutter project.
+description: A mobile client for Lemmy - a federated reddit alternative
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -45,7 +45,6 @@ dependencies:
   fuzzy: <1.0.0
   lemmy_api_client: ^0.10.2
   matrix4_transform: ^1.1.7
-
 
   flutter:
     sdk: flutter
