--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,7 +90,7 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.krawieck" "\0"
-            VALUE "FileDescription", "A new Flutter project." "\0"
+            VALUE "FileDescription", "lemmur" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "lemmur" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2020 com.krawieck. All rights reserved." "\0"
