--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,13 @@ dependencies:
   timeago: ^2.0.27
   fuzzy: <1.0.0
   lemmy_api_client: ^0.12.0
+  intl: ^0.16.1
   matrix4_transform: ^1.1.7
   json_annotation: ^3.1.1
 
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
@@ -74,6 +77,7 @@ flutter_icons:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
