--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   fuzzy: <1.0.0
   lemmy_api_client: ^0.12.0
   matrix4_transform: ^1.1.7
+  json_annotation: ^3.1.1
 
   flutter:
     sdk: flutter
@@ -59,6 +60,8 @@ dev_dependencies:
     sdk: flutter
   effective_dart: ^1.0.0
   flutter_launcher_icons: ^0.8.1
+  json_serializable: ^3.5.1
+  build_runner: ^1.11.1
 
 flutter_icons:
   android: true
