--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
 
       - uses: subosito/flutter-action@v1
         with:
-          channel: "dev"
+          channel: "stable"
 
       - name: Get additional dependencies
         run: |
@@ -125,7 +125,7 @@ jobs:
 
       - uses: subosito/flutter-action@v1
         with:
-          channel: "dev"
+          channel: "stable"
 
       - name: Enable windows support
         run: |
