--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,34 +18,34 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.4.1+14
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   # widgets
-  flutter_speed_dial: ^1.2.5
-  photo_view: ^0.10.2
+  flutter_speed_dial: ^3.0.5
+  photo_view: ^0.11.1
   markdown: ^4.0.0
   flutter_markdown: ^0.6.1
-  cached_network_image: ^2.2.0+1
-  modal_bottom_sheet: ^1.0.0+1
+  cached_network_image: ^3.0.0
+  modal_bottom_sheet: ^2.0.0
 
   # native
   share: ^2.0.1
-  url_launcher: ^5.5.1
-  shared_preferences: ">=0.5.0 <2.0.0"
-  package_info: ^0.4.3
-  image_picker: ^0.7.3
+  url_launcher: ^6.0.3
+  shared_preferences: ^2.0.5
+  package_info: ^2.0.0
+  image_picker: ^0.7.4
 
   # state management
   flutter_hooks: ^0.16.0
-  provider: ^4.3.1
+  provider: ^5.0.0
 
   # utils
-  timeago: ^2.0.27
-  fuzzy: <1.0.0
+  timeago: ^3.0.2
+  fuzzy: ^0.4.0-nullsafety.0
   lemmy_api_client: ^0.14.0
   intl: ^0.17.0
-  matrix4_transform: ^1.1.7
+  matrix4_transform: ^2.0.0
   json_annotation: ^4.0.1
 
   flutter:
@@ -55,7 +55,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
