--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,10 @@ dependencies:
   # utils
   timeago: ^3.0.2
   fuzzy: ^0.4.0-nullsafety.0
-  lemmy_api_client: ^0.15.0
+  lemmy_api_client:
+    git:
+      url: https://github.com/krawieck/lemmy_api_client
+      ref: lemmy-0.12
   intl: ^0.17.0
   matrix4_transform: ^2.0.0
   json_annotation: ^4.0.1
