--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ environment:
 
 dependencies:
   # widgets
-  flutter_speed_dial: ^3.0.5
+  flutter_speed_dial: ^4.3.0
   # TODO: bring back to pub hosted when fix is released
   photo_view:
     git:
@@ -34,15 +34,15 @@ dependencies:
   modal_bottom_sheet: ^2.0.0
 
   # native
-  share: ^2.0.1
+  share_plus: ^2.1.4
   url_launcher: ^6.0.3
   shared_preferences: ^2.0.5
-  package_info: ^2.0.0
-  image_picker: ^0.7.4
+  package_info_plus: ^1.0.6
+  image_picker: ^0.8.4
 
   # state management
-  flutter_hooks: ^0.16.0
-  provider: ^5.0.0
+  flutter_hooks: ^0.18.0
+  provider: ^6.0.0
   mobx: ^2.0.4
   flutter_mobx: ^2.0.2
 
@@ -52,9 +52,9 @@ dependencies:
   lemmy_api_client: ^0.16.0
   intl: ^0.17.0
   matrix4_transform: ^2.0.0
-  json_annotation: ^4.0.1
+  json_annotation: ^4.1.0
   keyboard_dismisser: ^2.0.0
-  freezed_annotation: ^0.14.2
+  freezed_annotation: ^0.14.3
 
   flutter:
     sdk: flutter
@@ -68,9 +68,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.0
-  json_serializable: ^4.1.0
-  build_runner: ^1.11.1
+  flutter_launcher_icons: ^0.9.2
+  json_serializable: ^5.0.0
+  build_runner: ^2.1.2
   mobx_codegen: ^2.0.2
   freezed: ^0.14.1+2
 
