--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,15 +7,11 @@ on:
     branches: [master]
 
 jobs:
-  android:
-    name: Android
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
 
       - uses: subosito/flutter-action@v1
         with:
@@ -33,12 +29,51 @@ jobs:
       - name: Run tests
         run: flutter test
 
+  android:
+    name: Android
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+
+      - name: Inject keystore
+        working-directory: android/app
+        run: |
+          echo "${{ secrets.SIGNING_KEY }}" | base64 -d | tee key.jks >/dev/null
+
       - name: Android build
-        run: flutter build apk --split-per-abi
+        env:
+          ANDROID_KEY_ALIAS: ${{ secrets.ALIAS }}
+          ANDROID_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          ANDROID_STORE_PATH: key.jks
+          ANDROID_STORE_PASSWORD: ${{ secrets.KEY_STORE_PASSWORD }}
+        run: flutter build apk --split-per-abi --release --target lib/main_prod.dart --flavor prod
+
+  ios:
+    name: iOS
+    runs-on: macos-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+
+      - run: flutter build ios --no-codesign --release --target lib/main_prod.dart --flavor prod
 
   linux:
     name: Linux
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - uses: actions/checkout@v2
 
@@ -57,11 +92,12 @@ jobs:
 
       - name: Build
         run: |
-          flutter build linux
+          flutter build linux --release --target lib/main_prod.dart
 
   windows:
     name: Windows
     runs-on: windows-latest
+    needs: lint
     steps:
       - uses: actions/checkout@v2
 
@@ -75,4 +111,4 @@ jobs:
 
       - name: Build
         run: |
-          flutter build windows
+          flutter build windows --release --target lib/main_prod.dart
