--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,21 +1,33 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"type": "flutter",
-			"command": "flutter",
-			"args": [
-				"pub",
-				"run",
-				"build_runner",
-				"build",
-				"--delete-conflicting-outputs"
-			],
-			"problemMatcher": [
-				"$dart-build_runner"
-			],
-			"group": "build",
-			"label": "flutter: build_runner build"
-		}
-	]
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "type": "flutter",
+      "command": "flutter",
+      "args": [
+        "pub",
+        "run",
+        "build_runner",
+        "build",
+        "--delete-conflicting-outputs"
+      ],
+      "problemMatcher": ["$dart-build_runner"],
+      "group": "build",
+      "label": "flutter: build_runner build"
+    },
+    {
+      "type": "flutter",
+      "command": "flutter",
+      "args": [
+        "pub",
+        "run",
+        "build_runner",
+        "watch",
+        "--delete-conflicting-outputs"
+      ],
+      "problemMatcher": ["$dart-build_runner"],
+      "group": "build",
+      "label": "flutter: flutter pub run build_runner watch"
+    }
+  ]
 }
