--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,15 +27,24 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 30
+    
+    lintOptions {
+        disable 'InvalidPackage'
+    }    
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    lintOptions {
-        disable 'InvalidPackage'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+   
     defaultConfig {
         applicationId "com.krawieck.lemmur"
         minSdkVersion 16
