--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
       ref: bugfix/flutter-2.5-update
   markdown: ^4.0.0
   flutter_markdown: ^0.6.1
-  cached_network_image: ^3.0.0
   modal_bottom_sheet: ^2.0.0
 
   # native
@@ -65,6 +64,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  extended_image: ^5.1.2
 
 dev_dependencies:
   flutter_test:
