--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,17 +23,13 @@ environment:
 dependencies:
   # widgets
   flutter_speed_dial: ^4.3.0
-  # TODO: bring back to pub hosted when fix is released
-  photo_view:
-    git:
-      url: https://github.com/karvulf/photo_view
-      ref: bugfix/flutter-2.5-update
+  photo_view: ^0.13.0
   markdown: ^4.0.0
   flutter_markdown: ^0.6.1
   modal_bottom_sheet: ^2.0.0
 
   # native
-  share_plus: ^2.1.4
+  share_plus: ^3.0.4
   url_launcher: ^6.0.3
   shared_preferences: ^2.0.5
   package_info_plus: ^1.0.6
@@ -73,7 +69,7 @@ dev_dependencies:
   json_serializable: ^6.0.0
   build_runner: ^2.1.2
   mobx_codegen: ^2.0.2
-  freezed: ^0.14.1+2
+  freezed: ^0.15.0+1
 
 flutter_icons:
   android: true
