--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -185,9 +185,9 @@ jobs:
       - name: Release to Google Play (beta)
         working-directory: fastlane
         run: |
-          echo $GOOGLE_SERVICE_ACCOUNT_KEY > $GOOGLE_SERVICE_ACCOUNT_KEY_PATH
+          echo $GOOGLE_SERVICE_ACCOUNT_KEY > ../$GOOGLE_SERVICE_ACCOUNT_KEY_PATH
           bundle exec fastlane android prod
         env:
-          GOOGLE_SERVICE_ACCOUNT_KEY_PATH: ./google-service-account-key.json
+          GOOGLE_SERVICE_ACCOUNT_KEY_PATH: google-service-account-key.json
           GOOGLE_SERVICE_ACCOUNT_KEY: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_KEY }}
-          ABB_PATH: ../android-appbundle/app-release.aab
+          ABB_PATH: android-appbundle/app-prod-release.aab
