Rename and remove stuff, add PullToRefresh (#293)
* Rename files

* Add PullToRefresh

* Remove l10n gen from repo

* Format l10n files in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
+      - name: Generate l10n
+        run: |
+          flutter gen-l10n
+          dart format lib/l10n/gen/
+
       - name: Run lints
         run: flutter analyze
 
