--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -91,6 +91,7 @@ linter:
     - unawaited_futures
     - unnecessary_brace_in_string_interps
     - unnecessary_const
+    - unnecessary_constructor_name
     - unnecessary_getters_setters
     - unnecessary_lambdas
     - unnecessary_new
@@ -116,7 +117,6 @@ linter:
 analyzer:
   exclude:
     - "**/*.g.dart"
-    - "**/*.freezed.dart"
     - "lib/gen/assets.gen.dart"
     - "lib/l10n/gen/*"
   # strong-mode:
