--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,12 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 0.7.0+18
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
+  flutter: ">=2.8.0 <3.0.0"
 
 dependencies:
   # widgets
-  flutter_speed_dial: ^4.3.0
+  flutter_speed_dial: ^5.0.0
   photo_view: ^0.13.0
   markdown: ^4.0.0
   flutter_markdown: ^0.6.1
@@ -35,7 +36,7 @@ dependencies:
   shared_preferences: ^2.0.5
   package_info_plus: ^1.0.6
   image_picker: ^0.8.4
-  extended_image: ^5.1.2
+  extended_image: ^6.0.1
 
   # state management
   flutter_hooks: ^0.18.0
@@ -80,7 +81,6 @@ flutter_icons:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
-  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
