--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  wc_form_validators: ^1.0.0
 
 dev_dependencies:
   flutter_test:
