--- a/.github/workflows/weblate.yml
+++ b/.github/workflows/weblate.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Fetch changes
         run: |
