--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,6 +5,7 @@ linter:
     - avoid_catching_errors
     - avoid_equals_and_hash_code_on_mutable_classes
     - avoid_escaping_inner_quotes
+    - avoid_final_parameters
     - avoid_function_literals_in_foreach_calls
     - avoid_init_to_null
     - avoid_null_checks_in_equality_operators
@@ -29,6 +30,7 @@ linter:
     - cascade_invocations
     - cast_nullable_to_non_nullable
     - constant_identifier_names
+    - conditional_uri_does_not_exist
     - curly_braces_in_flow_control_structures
     - directives_ordering
     - empty_catches
@@ -41,8 +43,11 @@ linter:
     - invariant_booleans
     - library_names
     - library_prefixes
+    - literal_only_boolean_expressions
     - non_constant_identifier_names
     - noop_primitive_operations
+    - no_leading_underscores_for_library_prefixes
+    - no_leading_underscores_for_local_identifiers
     - null_check_on_nullable_type_parameter
     - omit_local_variable_types
     - one_member_abstracts
@@ -81,7 +86,9 @@ linter:
     - prefer_spread_collections
     - prefer_typing_uninitialized_variables
     - recursive_getters
+    - secure_pubspec_urls
     - sized_box_for_whitespace
+    - sized_box_shrink_expand
     - slash_for_doc_comments
     - sort_child_properties_last
     - sort_unnamed_constructors_first
@@ -94,6 +101,7 @@ linter:
     - unnecessary_constructor_name
     - unnecessary_getters_setters
     - unnecessary_lambdas
+    - unnecessary_late
     - unnecessary_new
     - unnecessary_null_aware_assignments
     - unnecessary_null_checks
