--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -112,12 +112,15 @@ linter:
     - unnecessary_string_interpolations
     - unnecessary_this
     - unrelated_type_equality_checks
+    - use_colored_box
+    - use_enums
     - use_full_hex_values_for_flutter_colors
     - use_is_even_rather_than_modulo
     - use_named_constants
     - use_raw_strings
     - use_rethrow_when_possible
     - use_setters_to_change_properties
+    - use_super_parameters
     - use_test_throws_matchers
     - use_to_and_as_if_applicable
     - void_checks
