--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion Math.max(flutter.compileSdkVersion, 32)
     
     lintOptions {
         disable 'InvalidPackage'
@@ -47,8 +47,8 @@ android {
    
     defaultConfig {
         applicationId "com.krawieck.lemmur"
-        minSdkVersion 16
-        targetSdkVersion 30
+        minSdkVersion Math.max(flutter.minSdkVersion, 16)
+        targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
