--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   # utils
   timeago: ^3.0.2
   fuzzy: ^0.4.0-nullsafety.0
-  lemmy_api_client: ^0.21.0
+  lemmy_api_client:
+    path: ../lemmy_api_client
   intl: ^0.17.0
   matrix4_transform: ^2.0.0
   json_annotation: ^4.5.0
