--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: flutter analyze
 
       - name: Check formatting
-        run: flutter format --dry-run --set-exit-if-changed .
+        run: dart format --set-exit-if-changed .
 
       - name: Run tests
         run: flutter test
