--- a/.github/workflows/weblate.yml
+++ b/.github/workflows/weblate.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Fetch changes
         run: |
-          git remote add weblate https://weblate.yerbamate.ml/git/lemmur/lemmur/
+          git remote add weblate https://weblate.yerbamate.ml/git/lemmynade/lemmynade/
           git fetch weblate
           git merge weblate/master
 
