--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: lemmur
+name: lemmynade
 description: A mobile client for Lemmy - a federated reddit alternative
 
 # The following line prevents the package from being accidentally published to
