--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(runner LANGUAGES CXX)
 
-set(BINARY_NAME "lemmur")
-set(APPLICATION_ID "com.krawieck.lemmur")
+set(BINARY_NAME "Lemmynade")
+set(APPLICATION_ID "com.zachatrocity.lemmynade")
 
 cmake_policy(SET CMP0063 NEW)
 
