--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -151,6 +151,8 @@ jobs:
 
       - name: Release to GitHub
         uses: softprops/action-gh-release@v1
+        permissions:
+          contents: write
         with:
           files: |
             android-build/*
