--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,5 @@
 # Uncomment this line to define a global platform for your project
+# MYKL: prevent an error message
 platform :ios, '14.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
