--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: lemmynade
+name: liftoff
 description: A mobile client for Lemmy - a federated reddit alternative
 
 # The following line prevents the package from being accidentally published to
@@ -51,10 +51,11 @@ dependencies:
     git:
       url: https://github.com/zachatrocity/lemmy_api_client.git
       ref: master
-    # path: ../lemmy_api_client
+  # lemmy_api_client:
+  #   path: ../lemmy_api_client
   intl: ^0.18.0
   matrix4_transform: ^2.0.0
-  json_annotation: ^4.5.0
+  json_annotation: ^4.8.1
   keyboard_dismisser: ^3.0.0
   freezed_annotation: ^2.0.1
   logging: ^1.0.1
@@ -76,12 +77,14 @@ dev_dependencies:
   mobx_codegen: ^2.0.2
   freezed: ^2.0.2
 
-flutter_icons:
+# To refresh: `pub run flutter_launcher_icons`
+flutter_launcher_icons:
   android: true
   ios: true
   image_path: assets/app_icon.png
   adaptive_icon_background: "#ffffff"
   adaptive_icon_foreground: assets/adaptive_icon_fg.png
+  remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
