renamed to lift off

--- a/ios_orig/Runner/Info.plist
+++ b/ios_orig/Runner/Info.plist
@@ -11,9 +11,9 @@
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundleName</key>
-	<string>Lemmynade</string>
+	<string>Liftoff</string>
 		<key>CFBundleDisplayName</key>
-	<string>Lemmynade</string>
+	<string>Liftoff</string>
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
 		<key>CFBundleShortVersionString</key>
