--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
   <application
     android:name="${applicationName}"
-        android:label="Lemmynade"
+        android:label="Liftoff"
     android:icon="@mipmap/ic_launcher">
 
     <activity
