--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(runner LANGUAGES CXX)
 
-set(BINARY_NAME "Lemmynade")
+set(BINARY_NAME "Liftoff")
 set(APPLICATION_ID "com.zachatrocity.lemmynade")
 
 cmake_policy(SET CMP0063 NEW)
